test/negative/CyclicInterfaces/A.java
package A;
import B.B;
public interface A extends B {
}
